@@ -40,6 +40,7 @@ import com.intellij.openapi.progress.util.ProgressIndicatorWithDelayedPresentati
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
@@ -49,10 +50,12 @@ import com.intellij.pom.NonNavigatable;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.ui.*;
 import com.intellij.ui.components.panels.NonOpaquePanel;
+import com.intellij.ui.render.RenderingHelper;
 import com.intellij.ui.tree.AsyncTreeModel;
 import com.intellij.ui.tree.StructureTreeModel;
 import com.intellij.ui.tree.TreePathUtil;
 import com.intellij.ui.tree.TreeVisitor;
+import com.intellij.ui.tree.ui.DefaultTreeUI;
 import com.intellij.ui.treeStructure.Tree;
 import com.intellij.util.*;
 import com.intellij.util.concurrency.Invoker;
@@ -60,6 +63,7 @@ import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.SmartHashSet;
 import com.intellij.util.text.DateFormatUtil;
 import com.intellij.util.ui.JBUI;
+import com.intellij.util.ui.UIUtil;
 import com.intellij.util.ui.tree.TreeUtil;
 import org.jetbrains.annotations.*;
 import org.jetbrains.concurrency.Promise;
@@ -72,9 +76,8 @@ import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
@@ -82,21 +85,10 @@ import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
-import static com.intellij.build.BuildConsoleUtils.getMessageTitle;
-import static com.intellij.build.BuildView.CONSOLE_VIEW_NAME;
-import static com.intellij.openapi.util.text.StringUtil.isEmpty;
-import static com.intellij.ui.AnimatedIcon.ANIMATION_IN_RENDERER_ALLOWED;
-import static com.intellij.ui.SimpleTextAttributes.GRAYED_ATTRIBUTES;
-import static com.intellij.ui.render.RenderingHelper.SHRINK_LONG_RENDERER;
-import static com.intellij.ui.tree.ui.DefaultTreeUI.AUTO_EXPAND_ALLOWED;
-import static com.intellij.util.ObjectUtils.chooseNotNull;
-import static com.intellij.util.containers.ContainerUtil.addIfNotNull;
-import static com.intellij.util.ui.UIUtil.*;
-
 /**
  * @author Vladislav.Soroka
  */
-public final class BuildTreeConsoleView implements ConsoleView, DataProvider, BuildConsoleView, Filterable<ExecutionNode>, OccurenceNavigator {
+public final class BuildTreeConsoleView implements ConsoleView, UiDataProvider, BuildConsoleView, Filterable<ExecutionNode>, OccurenceNavigator {
   private static final Logger LOG = Logger.getInstance(BuildTreeConsoleView.class);
 
   private static final @NonNls String TREE = "tree";
@@ -158,9 +150,12 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     JPanel myContentPanel = new JPanel();
     myContentPanel.setLayout(new CardLayout());
     myContentPanel.add(ScrollPaneFactory.createScrollPane(myTree, SideBorder.NONE), TREE);
+    if (Boolean.getBoolean("rd.build.tree.as.becontrol")) {
+      RemoteTransferUIManager.setWellBeControlizable(myContentPanel);
+    }
 
     if (ExperimentalUI.isNewUI()) {
-      setBackgroundRecursively(myContentPanel, JBUI.CurrentTheme.ToolWindow.background());
+      UIUtil.setBackgroundRecursively(myContentPanel, JBUI.CurrentTheme.ToolWindow.background());
     }
 
     myPanel.setLayout(new BorderLayout());
@@ -194,7 +189,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
   }
 
   private void installContextMenu() {
-    invokeLaterIfNeeded(() -> {
+    UIUtil.invokeLaterIfNeeded(() -> {
       final DefaultActionGroup rerunActionGroup = new DefaultActionGroup();
       List<AnAction> restartActions = myBuildDescriptor.getRestartActions();
       rerunActionGroup.addAll(restartActions);
@@ -307,7 +302,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     ExecutionNode parentNode = event.getParentId() == null ? null : nodesMap.get(event.getParentId());
     if (event instanceof MessageEvent) {
       parentNode = createMessageParentNodes((MessageEvent)event, parentNode);
-      addIfNotNull(structureChanged, parentNode);
+      ContainerUtil.addIfNotNull(structureChanged, parentNode);
     }
     return parentNode;
   }
@@ -350,7 +345,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
             Navigatable messageEventNavigatable = messageEvent.getNavigatable(myProject);
             currentNode.setNavigatable(messageEventNavigatable);
             MessageEventResult messageEventResult = messageEvent.getResult();
-            addIfNotNull(structureChanged, currentNode.setResult(messageEventResult));
+            ContainerUtil.addIfNotNull(structureChanged, currentNode.setResult(messageEventResult));
 
             if (messageEventResult instanceof FailureResult) {
               for (Failure failure : ((FailureResult)messageEventResult).getFailures()) {
@@ -433,7 +428,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
         result = calculateDerivedResult((DerivedResult)result, currentNode);
       }
       currentNode.setResult(result, false);
-      addIfNotNull(structureChanged, currentNode.setEndTime(event.getEventTime()));
+      ContainerUtil.addIfNotNull(structureChanged, currentNode.setEndTime(event.getEventTime()));
       SkippedResult skippedResult = new SkippedResultImpl();
       finishChildren(structureChanged, currentNode, skippedResult);
       if (result instanceof FailureResult) {
@@ -501,7 +496,10 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
   @ApiStatus.Internal
   @TestOnly
   public @Nullable ExecutionConsole getSelectedNodeConsole() {
-    ExecutionConsole console = myConsoleViewHandler.getCurrentConsole();
+    ExecutionConsole console = ObjectUtils.notNull(
+      myConsoleViewHandler.getCurrentConsole(),
+      () -> myConsoleViewHandler.getEmptyConsole()
+    );
     if (console instanceof ConsoleViewImpl) {
       ((ConsoleViewImpl)console).flushDeferredText();
     }
@@ -591,14 +589,14 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
                                                  @NotNull String defaultFailureMessage,
                                                  long eventTime,
                                                  @NotNull Set<? super ExecutionNode> structureChanged) {
-    String message = chooseNotNull(failure.getMessage(), failure.getDescription());
+    String message = ObjectUtils.chooseNotNull(failure.getMessage(), failure.getDescription());
     if (message == null && failure.getError() != null) {
       message = failure.getError().getMessage();
     }
     if (message == null) {
       message = defaultFailureMessage;
     }
-    String failureNodeName = getMessageTitle(message);
+    String failureNodeName = BuildConsoleUtils.getMessageTitle(message);
     Navigatable failureNavigatable = failure.getNavigatable();
     FilePosition filePosition = null;
     if (failureNavigatable instanceof OpenFileDescriptor fileDescriptor) {
@@ -654,7 +652,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
         continue;
       }
       finishChildren(structureChanged, child, result);
-      addIfNotNull(structureChanged, child.setResult(result));
+      ContainerUtil.addIfNotNull(structureChanged, child.setResult(result));
     }
   }
 
@@ -758,10 +756,11 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
                                                  @NotNull FilePosition filePosition,
                                                  @Nullable Navigatable navigatable,
                                                  ExecutionNode parentNode) {
-    String filePath = FileUtil.toSystemIndependentName(filePosition.getFile().getPath());
+    File filePositionFile = filePosition.getFile();
+    String filePath = filePositionFile == null ? "" : FileUtilRt.toSystemIndependentName(filePositionFile.getPath());
     String parentsPath = "";
 
-    String relativePath = FileUtil.getRelativePath(myWorkingDir, filePath, '/');
+    String relativePath = FileUtilRt.getRelativePath(myWorkingDir, filePath, '/');
     if (relativePath != null) {
       if (relativePath.equals(".")) {
         return parentNode;
@@ -771,7 +770,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
       }
     }
 
-    if (isEmpty(parentsPath)) {
+    if (parentsPath.isEmpty()) {
       File userHomeDir = new File(SystemProperties.getUserHome());
       if (FileUtil.isAncestor(userHomeDir, new File(filePath), true)) {
         relativePath = FileUtil.getLocationRelativeToUserHome(filePath, false);
@@ -783,23 +782,22 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     else {
       relativePath = getRelativePath(parentsPath, filePath);
     }
-    Path path = Paths.get(relativePath);
+    Path path = Path.of(relativePath);
     String nodeName = path.getFileName().toString();
     Path pathParent = path.getParent();
     String pathHint = pathParent == null ? null : pathParent.toString();
-    parentNode = getOrCreateMessagesNode(eventTime, filePath, parentNode, nodeName, pathHint,
-                                         () -> {
-                                           VirtualFile file = VfsUtil.findFileByIoFile(filePosition.getFile(), false);
-                                           if (file != null) {
-                                             return file.getFileType().getIcon();
-                                           }
-                                           return null;
-                                         }, navigatable, nodesMap, myProject);
+    parentNode = getOrCreateMessagesNode(eventTime, filePath, parentNode, nodeName, pathHint, () -> {
+      VirtualFile file = filePositionFile == null ? null : VfsUtil.findFileByIoFile(filePositionFile, false);
+      if (file != null) {
+        return file.getFileType().getIcon();
+      }
+      return null;
+    }, navigatable, nodesMap, myProject);
     return parentNode;
   }
 
   private static String getRelativePath(@NotNull String basePath, @NotNull String filePath) {
-    String path = ObjectUtils.notNull(FileUtil.getRelativePath(basePath, filePath, '/'), filePath);
+    String path = Objects.requireNonNullElse(FileUtil.getRelativePath(basePath, filePath, '/'), filePath);
     File userHomeDir = new File(SystemProperties.getUserHome());
     if (path.startsWith("..") && FileUtil.isAncestor(userHomeDir, new File(filePath), true)) {
       return FileUtil.getLocationRelativeToUserHome(filePath, false);
@@ -808,7 +806,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
   }
 
   public void hideRootNode() {
-    invokeLaterIfNeeded(() -> {
+    UIUtil.invokeLaterIfNeeded(() -> {
       if (myTree != null) {
         myTree.setRootVisible(false);
         myTree.setShowsRootHandles(true);
@@ -817,15 +815,14 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
   }
 
   @Override
-  public @Nullable Object getData(@NotNull String dataId) {
-    if (PlatformCoreDataKeys.HELP_ID.is(dataId)) return "reference.build.tool.window";
-    if (CommonDataKeys.PROJECT.is(dataId)) return myProject;
-    if (CommonDataKeys.NAVIGATABLE_ARRAY.is(dataId)) return extractSelectedNodesNavigatables();
-    if (CommonDataKeys.NAVIGATABLE.is(dataId)) return extractSelectedNodeNavigatable();
-    return null;
+  public void uiDataSnapshot(@NotNull DataSink sink) {
+    sink.set(PlatformCoreDataKeys.HELP_ID, "reference.build.tool.window");
+    sink.set(CommonDataKeys.PROJECT, myProject);
+    sink.set(CommonDataKeys.NAVIGATABLE_ARRAY, extractSelectedNodesNavigatables());
+    sink.set(CommonDataKeys.NAVIGATABLE, extractSelectedNodeNavigatable());
   }
 
-  private @Nullable Object extractSelectedNodeNavigatable() {
+  private @Nullable Navigatable extractSelectedNodeNavigatable() {
     TreePath selectedPath = TreeUtil.getSelectedPathIfOne(myTree);
     if (selectedPath == null) return null;
     DefaultMutableTreeNode node = ObjectUtils.tryCast(selectedPath.getLastPathComponent(), DefaultMutableTreeNode.class);
@@ -837,7 +834,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     return navigatables.get(0);
   }
 
-  private Object extractSelectedNodesNavigatables() {
+  private Navigatable @Nullable [] extractSelectedNodesNavigatables() {
     final List<Navigatable> navigatables = new ArrayList<>();
     for (ExecutionNode each : getSelectedNodes()) {
       List<Navigatable> navigatable = each.getNavigatables();
@@ -864,8 +861,8 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
   private static Tree initTree(@NotNull AsyncTreeModel model) {
     Tree tree = new Tree(model);
     tree.setLargeModel(true);
-    ComponentUtil.putClientProperty(tree, ANIMATION_IN_RENDERER_ALLOWED, true);
-    ComponentUtil.putClientProperty(tree, AUTO_EXPAND_ALLOWED, false);
+    ComponentUtil.putClientProperty(tree, AnimatedIcon.ANIMATION_IN_RENDERER_ALLOWED, true);
+    ComponentUtil.putClientProperty(tree, DefaultTreeUI.AUTO_EXPAND_ALLOWED, false);
     tree.setRootVisible(false);
     EditSourceOnDoubleClickHandler.install(tree);
     EditSourceOnEnterKeyHandler.install(tree);
@@ -874,7 +871,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     if (Registry.is("build.toolwindow.show.inline.statistics")) {
       tree.setCellRenderer(new MyNodeRenderer());
     }
-    tree.putClientProperty(SHRINK_LONG_RENDERER, true);
+    tree.putClientProperty(RenderingHelper.SHRINK_LONG_RENDERER, true);
     return tree;
   }
 
@@ -941,7 +938,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
         @Override
         public void addView(@NotNull ExecutionConsole view, @NotNull String viewName) {
           super.addView(view, viewName);
-          removeScrollBorder(view.getComponent());
+          UIUtil.removeScrollBorder(view.getComponent());
         }
       };
       Disposer.register(this, myView);
@@ -962,7 +959,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
       myPanel.add(myToolbar.getComponent(), BorderLayout.EAST);
 
       if (ExperimentalUI.isNewUI()) {
-        setBackgroundRecursively(myPanel, JBUI.CurrentTheme.ToolWindow.background());
+        UIUtil.setBackgroundRecursively(myPanel, JBUI.CurrentTheme.ToolWindow.background());
       }
 
       tree.addTreeSelectionListener(e -> {
@@ -995,7 +992,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     }
 
     private void updateToolbarActionsImmediately() {
-      invokeLaterIfNeeded(() -> myToolbar.updateActionsImmediately());
+      UIUtil.invokeLaterIfNeeded(() -> myToolbar.updateActionsImmediately());
     }
 
     private @NotNull DefaultActionGroup createDefaultTextConsoleToolbar() {
@@ -1015,6 +1012,11 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
 
     private void updateProgressBar(long total, long progress) {
       myPanelWithProgress.updateProgress(total, progress);
+    }
+
+    @TestOnly
+    private @NotNull ExecutionConsole getEmptyConsole() {
+      return myView.getView(EMPTY_CONSOLE_NAME);
     }
 
     private @Nullable ExecutionConsole getCurrentConsole() {
@@ -1071,7 +1073,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
     }
 
     public void maybeAddExecutionConsole(@NotNull ExecutionNode node, @NotNull BuildEventPresentationData presentationData) {
-      invokeLaterIfNeeded(() -> {
+      UIUtil.invokeLaterIfNeeded(() -> {
         ExecutionConsole executionConsole = presentationData.getExecutionConsole();
         if (executionConsole == null) return;
         String nodeConsoleViewName = getNodeConsoleViewName(node);
@@ -1128,8 +1130,8 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
       }
 
       myExecutionNode = null;
-      if (myView.getView(CONSOLE_VIEW_NAME) != null/* && myViewSettingsProvider.isSideBySideView()*/) {
-        myView.showView(CONSOLE_VIEW_NAME, false);
+      if (myView.getView(BuildView.CONSOLE_VIEW_NAME) != null/* && myViewSettingsProvider.isSideBySideView()*/) {
+        myView.showView(BuildView.CONSOLE_VIEW_NAME, false);
         myPanel.setVisible(true);
       }
       else {
@@ -1234,7 +1236,7 @@ public final class BuildTreeConsoleView implements ConsoleView, DataProvider, Bu
           myDurationWidth = metrics.stringWidth(myDurationText);
           myDurationLeftInset = metrics.getHeight() / 4;
           myDurationRightInset = ExperimentalUI.isNewUI() ? tree.getInsets().right + JBUI.scale(4) : myDurationLeftInset;
-          myDurationColor = selected ? getTreeSelectionForeground(hasFocus) : GRAYED_ATTRIBUTES.getFgColor();
+          myDurationColor = selected ? UIUtil.getTreeSelectionForeground(hasFocus) : SimpleTextAttributes.GRAYED_ATTRIBUTES.getFgColor();
         }
       }
     }
